--- a/data/www/setup.html
+++ b/data/www/setup.html
@@ -12,7 +12,7 @@
         <script src="/www/js/jquery-ui.min.js"></script>
         <script src="/www/js/bootstrap.min.js"></script>
         <script src="/www/js/jsonFormer.jquery.js"></script>
-
+        <link rel="icon" href="TSS.ico" />
     </head>
     <body>
         <div class="container">
