--- a/data/www/setup.html
+++ b/data/www/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Alpaca Ascom Drivers Setup</title>
+        <title>Alpaca TSBoard Drivers Setup</title>
         <meta charset="UTF-8">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="/www/css/bootstrap.min.css">
